// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Email /> should render with error in props 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Email
    </h2>
  </Box__BoxGroupHeader>
  <Email__EmailFormContainer>
    <form
      onSubmit={[Function]}
    >
      <InputError
        error=""
        label="Email address"
        onBlur={[Function]}
        onChange={[Function]}
        value="foo@example.com"
      />
      <SaveButton
        pullRight={true}
      />
    </form>
  </Email__EmailFormContainer>
</Box__BoxGroup>
`;

exports[`<Email /> should render with error in state 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Email
    </h2>
  </Box__BoxGroupHeader>
  <Email__EmailFormContainer>
    <form
      onSubmit={[Function]}
    >
      <InputError
        error="Foo error"
        label="Email address"
        onBlur={[Function]}
        onChange={[Function]}
        value="foo@example.com"
      />
      <SaveButton
        pullRight={true}
      />
    </form>
  </Email__EmailFormContainer>
</Box__BoxGroup>
`;

exports[`<Email /> should render with initial email 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Email
    </h2>
  </Box__BoxGroupHeader>
  <Email__EmailFormContainer>
    <form
      onSubmit={[Function]}
    >
      <InputError
        error=""
        label="Email address"
        onBlur={[Function]}
        onChange={[Function]}
        value="foo@example.com"
      />
      <SaveButton
        pullRight={true}
      />
    </form>
  </Email__EmailFormContainer>
</Box__BoxGroup>
`;

exports[`<Email /> should render without initial email 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Email
    </h2>
  </Box__BoxGroupHeader>
  <Email__EmailFormContainer>
    <form
      onSubmit={[Function]}
    >
      <InputError
        error=""
        label="Email address"
        onBlur={[Function]}
        onChange={[Function]}
        value=""
      />
      <SaveButton
        pullRight={true}
      />
    </form>
  </Email__EmailFormContainer>
</Box__BoxGroup>
`;
